--- a/public/index.html
+++ b/public/index.html
@@ -23,18 +23,20 @@
                     <div class="other-say">qwdwqfd</div>
                 </div>
 
-                <div class="other">
-                    <div class="other-head"></div>
-                    <div class="other-say">qwdwqfdefewfewfewfewfewfewfewfewfewfewfewfewfewfef</div>
-                </div>
-
-                <div class="other">
-                    <div class="other-head"></div>
-                    <div class="other-say">qwdwqfd</div>
-                </div>
-
                 <div class="my">
                     <div class="my-say">ewfewffwefwefkewfbvhjewbfjewfvjewqf</div>
+                    <div class="my-head"></div>
+                </div>
+                <div class="other">
+                    <div class="other-head"></div>
+                    <div class="other-say">
+                        <img src="./static/banner.png" />
+                    </div>
+                </div>
+                <div class="my">
+                    <div class="my-say">
+                        <img src="./static/banner.png" />
+                    </div>
                     <div class="my-head"></div>
                 </div>-->
             </section>
