--- a/public/index.html
+++ b/public/index.html
@@ -61,60 +61,48 @@
                 </div>
 
                 <div class="emojiList" id="emojiContent">
-                    <img src="emoji/0.gif" />
-                    <img src="emoji/1.gif" />
-                    <img src="emoji/2.gif" />
-                    <img src="emoji/3.gif" />
-                    <img src="emoji/4.gif" />
-                    <img src="emoji/5.gif" />
-                    <img src="emoji/6.gif" />
-                    <img src="emoji/7.gif" />
-                    <img src="emoji/8.gif" />
-                    <img src="emoji/9.gif" />
-                    <img src="emoji/10.gif" />
-                    <img src="emoji/11.gif" />
-                    <img src="emoji/12.gif" />
-                    <img src="emoji/13.gif" />
-                    <img src="emoji/14.gif" />
-                    <img src="emoji/15.gif" />
-                    <img src="emoji/16.gif" />
-                    <img src="emoji/17.gif" />
-                    <img src="emoji/18.gif" />
-                    <img src="emoji/19.gif" />
-                    <img src="emoji/20.gif" />
-                    <img src="emoji/21.gif" />
-                    <img src="emoji/22.gif" />
-                    <img src="emoji/23.gif" />
-                    <img src="emoji/24.gif" />
-                    <img src="emoji/25.gif" />
-                    <img src="emoji/26.gif" />
-                    <img src="emoji/27.gif" />
-                    <img src="emoji/28.gif" />
-                    <img src="emoji/29.gif" />
-                    <img src="emoji/30.gif" />
-                    <img src="emoji/31.gif" />
-                    <img src="emoji/32.gif" />
-                    <img src="emoji/33.gif" />
-                    <img src="emoji/34.gif" />
-                    <img src="emoji/35.gif" />
-                    <img src="emoji/36.gif" />
-                    <img src="emoji/37.gif" />
-                    <img src="emoji/38.gif" />
-                    <img src="emoji/39.gif" />
-                    <img src="emoji/40.gif" />
-                    <img src="emoji/41.gif" />
-                    <img src="emoji/42.gif" />
-                    <img src="emoji/43.gif" />
-                    <img src="emoji/44.gif" />
-                    <img src="emoji/45.gif" />
-                    <img src="emoji/46.gif" />
-                    <img src="emoji/47.gif" />
-                    <img src="emoji/48.gif" />
-                    <img src="emoji/49.gif" />
-                    <img src="emoji/50.gif" />
-                    <img src="emoji/51.gif" />
-                    <img src="emoji/52.gif" />
-                    <img src="emoji/53.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e100.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e101.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e102.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e103.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e104.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e105.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e106.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e107.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e108.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e109.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e110.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e111.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e112.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e113.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e114.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e115.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e116.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e117.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e118.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e119.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e120.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e121.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e122.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e123.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e124.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e125.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e126.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e127.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e128.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e129.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e130.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e131.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e132.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e133.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e134.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e135.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e136.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e137.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e138.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e139.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e140.gif" />
+                    <img src="http://qzonestyle.gtimg.cn/qzone/em/e141.gif" />
                 </div>
             </footer>
         </div>
